# rust_royale

./: Cargo.toml  roadmap_by_gemini.md  rust_royale_postmortem.md
app/: Cargo.toml
app/src/: main.rs
assets/: stats.json
core/: Cargo.toml
core/src/: arena.rs  components.rs  constants.rs  lib.rs  stats.rs
engine/: Cargo.toml
engine/src/systems/: combat.rs  input.rs  match_manager.rs  mod.rs  movement.rs  spawning.rs  ui.rs
journey_with_gemini/: card_elixir_sys.md  game_env_phases.md  how_bevy_works.md  the_two_layerworls.md
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: arena.rs  components.rs  lib.rs  main.rs  main1.rs  pathfinding.rs  stats.rs  systems.rs
