[workspace]
resolver = "2"
members = [
    "core",
    "engine",
    "app",
    "sandbox",
]

[workspace.dependencies]
bevy = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional but highly recommended for fast compilation during dev
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3